--- a/style.css
+++ b/style.css
@@ -5,23 +5,26 @@
 }
 body
 {
+    height: 100vh;
     background-color: hsl(212, 45%, 89%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 }
 div
 {
-    width: 300px;
-    height: 485px;
+    width: 30vw;
     background-color:white;
     margin:70px auto;
     border-radius: 20px;
-    padding: 15px;
+    padding: 15px 15px 40px 15px;
     text-align: center;
 
 }
 img
 {
-    width: 300px;
+    width: 30vw;
     height: 300px;
     border-radius: 10px;
     margin-bottom: 20px;
@@ -43,4 +46,11 @@ p{
     font-family: "Outfit", serif;
     font-optical-sizing: auto;
     font-weight: 400;
+}
+
+@media screen and (min-width: 1000px){
+    div,img
+    {
+      width: 23vw;
+    }
 }
